# moldock

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  tinker.py
.github/workflows/: ci.yml
moldock/: utils.py
moldock/core/: docking_software.py  protein.py  smina.py
moldock/http_api/: api.py  dto.py  main.py
moldock/service/: interface.py  resources.py  run.py  smokeflow.py  utils.py  workflow.py
