[tool.poetry]
name = "moldock"
version = "0.1.0"
description = "a moleular docking microservice utilising metaflow and AWS batch"
authors = ["Calum Hand"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
rdkit = "^2024.3.5"
metaflow = "^2.12.15"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
